<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/logout"
        android:src="@drawable/ic_logout"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="8dp"/>

    <LinearLayout
        android:id="@+id/displayNameContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/displayNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:enabled="false"
            android:background="@android:color/transparent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/editDisplayNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_edit" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/saveDisplayNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/displayNameContainer"
        android:layout_toStartOf="@id/displayNameContainer"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_save"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/cancelDisplayNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/displayNameContainer"
        android:layout_toEndOf="@id/displayNameContainer"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cancel"
        android:src="@drawable/ic_cancel"
        android:visibility="gone" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
